LLM4Config/assets/stackgres-charts_stackgres-operator.yaml
---
# Source: stackgres-operator/templates/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: my-stackgres-operator
spec:
  type: ClusterIP
  selector:
    app: my-stackgres-operator
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
---
# Source: stackgres-operator/templates/operator-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: my-stackgres-operator
    version: "1.13.0"
    group:  stackgres.io
  name: my-stackgres-operator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-stackgres-operator
      group:  stackgres.io
  template:
    metadata:
      labels:
        app: my-stackgres-operator
        group:  stackgres.io
    spec:
      serviceAccountName: my-stackgres-operator
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: my-stackgres-operator
        image: "quay.io/stackgres/operator:1.13.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
        - containerPort: 8443
          name: "https"
          protocol: "TCP"
        livenessProbe:
          httpGet:
            path: "/q/health/live"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: "/q/health/ready"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 0
          periodSeconds: 2
          timeoutSeconds: 1
        volumeMounts:
          - name: operator-certs
            mountPath: /etc/operator/certs
            readOnly: true
      volumes:
        - name: operator-certs
          secret:
            secretName: my-stackgres-operator-certs
            optional: true
---
# Source: stackgres-operator/templates/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-stackgres-operator
  namespace: default
webhooks:
  - name: sgcluster.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgclusters"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgcluster'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgpgconfig.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgpgconfigs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgpgconfig'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgpoolconfig.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgpoolconfigs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgpoolconfig'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sginstanceprofile.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sginstanceprofiles"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sginstanceprofile'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgbackupconfig.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgbackupconfigs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgbackupconfig'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgbackup.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgbackups"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgbackup'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgdistributedlogs.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgdistributedlogs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgdistributedlogs'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgdbops.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgdbops"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgdbops'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgobjectstorage.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgobjectstorages"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgobjectstorage'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgscripts.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgscripts"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgscript'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgshardedclusters.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgshardedclusters"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgshardedcluster'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgshardedbackups.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgshardedbackups"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgshardedbackup'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgshardeddbops.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgshardeddbops"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgshardeddbops'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgstreams.mutating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgstreams"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/mutation/sgstreams'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
---
# Source: stackgres-operator/templates/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-stackgres-operator
  namespace: default
webhooks:
  - name: sgcluster.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgclusters"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgcluster'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgpgconfig.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgpgconfigs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgpgconfig'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgpoolconfig.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgpoolconfigs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgpoolconfig'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sginstanceprofile.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sginstanceprofiles"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sginstanceprofile'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgbackupconfig.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgbackupconfigs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgbackupconfig'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgbackup.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgbackups"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgbackup'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgdistributedlogs.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgdistributedlogs"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgdistributedlogs'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgdbops.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgdbops"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgdbops'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgobjectstorage.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgobjectstorages"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgobjectstorage'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgscripts.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgscripts"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgscript'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgshardedclusters.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgshardedclusters"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgshardedcluster'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgshardedbackups.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgshardedbackups"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgshardedbackup'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgshardeddbops.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgshardeddbops"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgshardeddbops'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
  - name: sgstreams.validating-webhook.stackgres.io
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["stackgres.io"]
        apiVersions: ["*"]
        resources: ["sgstreams"]
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: my-stackgres-operator
        path: '/stackgres/validation/sgstreams'
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
---
# Source: stackgres-operator/templates/tests/test-operator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-stackgres-operator-test-connection"
  labels:
    app: "my-stackgres-operator"
    group: helm-tests
  annotations:
    "helm.sh/hook": test
spec:
  serviceAccountName: my-stackgres-operator
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
  containers:
    - name: conn-check
      image: 'quay.io/ongres/kubectl:v1.30.1-build-6.33'
      imagePullPolicy: "IfNotPresent"
      command:
        - "bash"
        - "-xe"
        - "-c"
        - |
          POD_NAME=$(kubectl get pod -n default -o name | grep -v my-stackgres-operator-test-connection | grep my-stackgres-operator)
          POD_IP=$(kubectl get ${POD_NAME} -n default -o jsonpath="{ .status.podIP }")
          curl -v ${POD_IP}:8080/q/health/live
